@@ -2,10 +2,12 @@
 AUTOMAKE_OPTIONS = subdir-objects
 ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}
 
-lib_LIBRARIES = libSAL.a
-libSAL_a_SOURCES = libSAL.c libSAL.h 
-dist_noinst_SCRIPTS = autogen.sh
+# additional include paths necessary to compile the C++ library
+AM_CXXFLAGS = -I$(top_srcdir)/src @AM_CXXFLAGS@
 
+###############################################################################
+# THE LIBRARIES TO BUILD
+###############################################################################
 # the library names to build (note we are building static libs only)
 lib_LIBRARIES = libsal.a
 
@@ -13,10 +15,11 @@ lib_LIBRARIES = libsal.a
 libsal_adir = $(includedir)/libsal
 
 # the list of header files that belong to the library (to be installed later)
-libsal_a_HEADERS = libsal.h 
+libsal_a_HEADERS = ../Sources/libsal.h 
 
 # the sources to add to the library and to add to the source distribution
-libsal_a_SOURCES = $(libsal_a_HEADERS) libsal.c 
+libsal_a_SOURCES = $(libsal_a_HEADERS) ../Sources/libsal.c 
 						
+dist_noinst_SCRIPTS = autogen.sh
 
 
