@@ -1,12 +1,59 @@
-AC_INIT([libSAL], [1.0], [frederic.dhaeyer@parrot.com])
+#                                               -*- Autoconf -*-
+# Process this file with autoconf to produce a configure script.
+
+AC_PREREQ([2.68])
+AC_INIT([libSAL], [1.0], [ardrone@ardrone.org])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_AUX_DIR(config)
 
+# automake initialisation and check for minimal automake API version 1.9
 AM_INIT_AUTOMAKE([-Wall no-define])
+
+# use the C++ compiler for the following checks
+AC_LANG([C++])
+
+##########################################################################
+# debug compilation support
+##########################################################################
+AC_MSG_CHECKING([whether to build with debug information])
+AC_ARG_ENABLE([debug],
+    [AS_HELP_STRING([--enable-debug],
+        [enable debug data generation (def=no)])],
+    [debugit="$enableval"],
+    [debugit=no])
+AC_MSG_RESULT([$debugit])
+
+if test x"$debugit" = x"yes"; then
+    AC_DEFINE([DEBUG],[],[Debug Mode])
+    AM_CXXFLAGS="$AM_CXXFLAGS -g -Wall -Werror -Wno-uninitialized -O0"
+else
+    AC_DEFINE([NDEBUG],[],[No-debug Mode])
+    AM_CXXFLAGS="$AM_CXXFLAGS -O3"
+fi
+
+##########################################################################
+# Checks for programs.
 AC_PROG_RANLIB
 AC_PROG_CC
 AM_PROG_CC_C_O
+AC_PROG_INSTALL
 
+# Checks for libraries.
+
+# Checks for header files.
+AC_HEADER_STDC
+
+# Checks for typedefs, structures, and compiler characteristics.
+AC_TYPE_SIZE_T
+
+# distribute additional compiler and linker flags
+# --> set these variables instead of CXXFLAGS or LDFLAGS
+AC_SUBST([AM_CXXFLAGS])
+AC_SUBST([AM_LDFLAGS])
+
+# Checks for library functions.
+
+# Generates Makefile
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
 
