@@ -1,0 +1,8 @@
+#ifndef _LIBSAL_H_
+#define _LIBSAL_H_
+#include <stdio.h>
+
+void example_function(void);
+
+#endif // _LIBSAL_H_
+
